# evetrade_api

./: .coverage  .gitignore  .pylintrc  LICENSE  Procfile  README.md  coverage.xml  example.env  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: check_data_sync.yml  check_endpoints.yml  data_sync_service.yml  evetrade_api_tests.yml  evetrade_deploy_dev.yml  evetrade_deploy_prod.yml  sync_jita_amarr.yml  sync_market_data.yml  sync_other_majors.yml  sync_remaining.yml  test_evetrade_api.yml
.github/workflows/sync_market_data/: app.py  market_data.py  requirements.txt
api/: gateway.py
api/esi/: orders.py  station.py
api/evetrade/: hauling.py  orders.py  station.py
api/utils/: helpers.py
data_sync_service/: .coverage  README.md  __init__.py  app.py  check_data.py  citadel_data.py  coverage.xml  main.py  market_data.py  pyproject.toml  requirements.txt
data_sync_service/tests/: __init__.py  conftest.py  test_citadel_data.py  test_main.py  test_market_data.py
event_driven_lambdas/: jump-count-processor.js  jump_count_processor.py  synchronize-universe-resources.js  synchronize_universe_resources.py
evetrade_functions/: get-region-list.js  get-station-list.js  synchronize-universe-resources.js
evetrade_functions/custom_api_gateway/: api_gateway.js
evetrade_functions/custom_api_gateway/example_events/: orders.json  region-hauling.json  station-hauling.json  station-trade.json
evetrade_functions/esi_handlers/: get-region-orders.js  get_hauling_orders.js  get_station_trades.js
evetrade_functions/esi_handlers/get_hauling_orders/: example_events.json  get_hauling_orders.js
evetrade_functions/esi_handlers/get_orders.js/: example_events.json  get_hauling_orders.js
evetrade_functions/jump_count_processor/: jump-count-processor.js
evetrade_functions/resource_handlers/: get-inv-types.js  get-station-id-mapping.js  get-station-list.js  get-universe-list.js  synchronize-universe-resources.js
node_handlers/: package.json
python_handlers/esi_handlers/: requirements.txt
src/: gateway.py
test/: conftest.py  test_gateway.py
tests/: conftest.py  test_gateway.py
(+20 files in other folders)
